# playground

./: .gitignore  .gitmodules  README.md
ahrocksdb-bench/: dune-project  run.sh
ahrocksdb-bench/test/: dune  test1.ml
avl_rust/: Cargo.toml
avl_rust/src/: main.rs
basic-pi-compute-sampling/: dune-project
basic-pi-compute-sampling/lib/: dune
basic-pi-compute-sampling/test/: dune
basic-tcp-server/: basic_tcp_server.ml  dune
bench_mtime/: dune  dune-project  main.ml  main.opam
bench_objects/: README.md  bench.ml  dune  output.txt  run.sh
bench_uncontended_mutex/: dune-project  run.sh
bench_uncontended_mutex/lib/: dune
coc-terms-rs/: Cargo.toml
go-http-basic/: go.mod  truc.go
hash-moonpool/: dune-project  hash.sh
io_bench/: .gitignore  Makefile  README.md  dune  io.ml  run
lmdb-ocaml-2024-04-22/: dune-project  run.sh  yolo1.opam
lwt-backtrace/: dune  dune-project  run.ml  run.sh
mini-redis-rs/: Cargo.toml
mini-redis-rs/examples/: load_test.rs  server.rs
mini-redis-rs/src/: client.rs  lib.rs  main.rs  server.rs  wire.rs
mtime_rdtsc_bench/: dune  run.sh
nested-smt-diamonds/: README.md  gen.py
ocaml-actual-io-monad/: dune-project  ocaml-actual-io-monad.opam
ocaml-actual-io-monad/src/: dune  io.ml
ocaml-actual-io-monad/test/: dune  test_ocaml_actual_io_monad.ml
ocaml-css-pretty-print/: dune-project
odin/1brc/: 1brc.py  (+6 more)
pybind11/: Makefile  README.md  truc.cxx
redis-stream-egui/: Cargo.toml
ring_buffer_mmap/: truc.c
runtime-events1/: Makefile  run.sh
rust/tiny-rg/: Cargo.toml
rust/tiny-rg/src/: main.rs
simple-twine-rust/: Cargo.toml
soa_term_rs/: Cargo.toml
sqlite_terms/: term1.ml  term2.ml
term-bank-rs/: Cargo.toml
terms-a-la-z3/: Cargo.toml
tiny-rg.rs/: Makefile  README.md
tiny_httpd_multipart/: dune-project  tiny_httpd_multipart.opam
tiny_rg_ml/: Makefile  dune-project  run.sh  tiny_rg_ml.opam
tiny_rg_ml/src/: dune  main.ml
zmq_bench1/: client.ml  dune  run.sh  server.ml
(+29 files in other folders)
