(lang dune 3.0)

(name tiny_rg_ml)

(generate_opam_files true)

(license MIT)

(authors "Simon Cruanes")

(maintainers "Simon Cruanes")

;(documentation https://url/to/documentation)

(package
 (name tiny_rg_ml)
 (synopsis "small rg")
 (depends ocaml containers moonpool iter ppx_deriving))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
